environments/dev/apps/aggregator-ssg-kustomization/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-ssg
  namespace: aggregator
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: aggregator-ssg
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
